--- a/AppWeb/Areas/Personal/Views/Persona/Index.cshtml
+++ b/AppWeb/Areas/Personal/Views/Persona/Index.cshtml
@@ -70,13 +70,13 @@
                         <label class="form-label">(*) Sexo:</label>
                             <div class="col-md-3 form-check">  
                                 <label class="gender-option">
-                                    <input class="form-check-input1 O G" type="checkbox" id="chkMasculino" name="Gender" />
+                                    <input class="form-check-input1 O " type="radio" name="Gender" value="M" />
                                     M
                                 </label>
                             </div>
                             <div class="col-md-3 form-check">                              
                                 <label class="gender-option">
-                                    <input class="form-check-input1 O G" type="checkbox" id="chkFemenino" name="Gender" />
+                                    <input class="form-check-input1 O " type="radio" name="Gender" value="F" />
                                     F
                                 </label>
                             </div>
